--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "bunx tsc --noEmit && next lint",
     "format": "bunx biome format --write",
     "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx src/db/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,6 +27,7 @@
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
+    "next-auth": "^5.0.0-beta.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "same-runtime": "^0.0.1",
@@ -44,6 +47,7 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.6",
     "typescript": "^5.8.3"
   }
 }
