--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18.3.1",
     "same-runtime": "^0.0.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
