--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@auth/drizzle-adapter": "^1.11.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.4.1",
@@ -30,6 +32,7 @@
     "next-auth": "^5.0.0-beta.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.5.0",
     "same-runtime": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
