--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.30",
+    "openai": "^6.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.5.0",
